issue ##2234 continue dark mode changes
fix some colours in admin curtesy of Alice

--- a/admin/themes/default/css/components/album_selector.css
+++ b/admin/themes/default/css/components/album_selector.css
@@ -37,7 +37,7 @@
   right: -40px;
   top: -40px;
   font-size: 30px;
-  color: white;
+  color: #444;
 }
 
 .ClosePopIn:hover {
